kernel/ver_out11.txt
Building kernel before verification...
=== Building Oreulia OS ===
[1/6] Assembling optimized assembly modules...
  ✓ context_switch.o, memory.o, interrupt.o, network.o, crypto.o
  ✓ cpu_features.o, atomic.o, perf.o, cow.o, process.o, idt.o
  ✓ dma.o, acpi.o, memopt.o, gdt.o, sysenter.o, syscall_entry.o, sgx.o, temporal.o
[2/6] Building Rust kernel (staticlib, i686)...
   Compiling oreulia-kernel v0.1.0 (/Users/keefereeves/Desktop/oreulia/kernel)
warning: oreulia-kernel@0.1.0: --- Oreulia Static Spectral Analysis (PMA §11.2) ---
warning: oreulia-kernel@0.1.0: Graph derived from: src/security/intent_graph.rs CTMC_Q (9×9 real topology)
warning: oreulia-kernel@0.1.0: Lanczos k=6 | λ₂(T)=0.483634 | Fiedler γ=0.516366 | Φ(G)≥0.258183 | residual=5.40e-1
warning: oreulia-kernel@0.1.0: SUCCESS: Cheeger conductance bound verified (real CTMC topology).
warning: oreulia-kernel@0.1.0: Preemptive compiler pipeline complete — PMA §11.2 satisfied.
error[E0432]: unresolved import `core::cmp`
  --> src/drivers/GPUsupport/mod.rs:65:11
   |
65 | use core::cmp::Ordering;
   |           ^^^ could not find `cmp` in `core`

warning: unused import: `MAX_WASM_TYPE_ARITY`
  --> src/execution/wasm_jit.rs:30:5
   |
30 |     MAX_WASM_TYPE_ARITY,
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

For more information about this error, try `rustc --explain E0432`.
warning: `oreulia-kernel` (lib) generated 1 warning
The following warnings were emitted during compilation:

warning: oreulia-kernel@0.1.0: --- Oreulia Static Spectral Analysis (PMA §11.2) ---
warning: oreulia-kernel@0.1.0: Graph derived from: src/security/intent_graph.rs CTMC_Q (9×9 real topology)
warning: oreulia-kernel@0.1.0: Lanczos k=6 | λ₂(T)=0.483634 | Fiedler γ=0.516366 | Φ(G)≥0.258183 | residual=5.40e-1
warning: oreulia-kernel@0.1.0: SUCCESS: Cheeger conductance bound verified (real CTMC topology).
warning: oreulia-kernel@0.1.0: Preemptive compiler pipeline complete — PMA §11.2 satisfied.

error: could not compile `oreulia-kernel` (lib) due to 1 previous error; 1 warning emitted
